# eegor

./: .gitattributes  .gitignore  MANIFEST.in  README.md  Untitled.ipynb  mne_test.ipynb  setup.cfg  setup.py  tmp.py
.circleci/: config.yml
config/: README.md
eegor/: README.md  __init__.py  _version.py  config.py  eegor.py  group.py  ica.py  main.py  parser.py  preproc.py
eegor/cli/: README.md  parser.py  run.py  version.py  workflow.py
eegor/config/: README.md  config.json
eegor/preprocess/: preprocess.py  reject.py
eegor/report/: head.html  qa.py  report.py  task.html  template.html
eegor/tests/: README.md  test_test.py
eegor/utils/: __init__.py  eeg.py  figure.py  html.py  objects.py  os.py
eegor/vis/: colors.py  deprecated.py  report.py  timeseries.py
incomplete/: deprecated.py  group.py
plep/: README.md  preproc.py
plep/utils/: os.py
