[metadata]
author = The PANLab team
author_email = pstetz@stanford.edu
description =
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
url = https://github.com/WilliamsPANLab/eegor

[options]
python_requires = >=3.7
install_requires =
    numpy
    pandas
    tqdm
    scipy
    plotly
    mne >=0.23.0
    autoreject >= 0.2.2
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = eegor/_version.py
versionfile_build = eegor/_version.py
tag_prefix = v
parentdir_prefix =
